@startuml

title __GAMEELEMENTS's Class Diagram__\n

  namespace main {
    namespace engine {
      namespace gameElements {
        class main.engine.gameElements.Bandit {
            - actions : List<Action>
            - bounties : ArrayList<Bounty>
            - bullets : int
            + Bandit()
            + addAction()
            + addBounty()
            + clearActions()
            + doAction()
            + dropBounty()
            + getActions()
            + getBounty()
            + getBullets()
            + getMoney()
            + rob()
            + shoot()
            + update()
        }
      }
    }
  }
  

  namespace main {
    namespace engine {
      namespace gameElements {
        class main.engine.gameElements.Bounty {
            ~ type : String
            ~ value : int
            + Bounty()
            + getType()
            + moveTo()
        }
      }
    }
  }
  

  namespace main {
    namespace engine {
      namespace gameElements {
        class main.engine.gameElements.Character {
            - name : String
            + getName()
            + move()
            ~ Character()
            ~ Character()
        }
      }
    }
  }
  

  namespace main {
    namespace engine {
      namespace gameElements {
        class main.engine.gameElements.Entity {
            # type : String
            # x : int
            # y : int
            + Entity()
            + getType()
            + getX()
            + getY()
        }
      }
    }
  }
  

  namespace main {
    namespace engine {
      namespace gameElements {
        class main.engine.gameElements.Marshall {
            - NERVOSITE_MARSHALL : double
            - stunned : boolean
            + Marshall()
            + autoMove()
            + catchBandit()
            + stun()
            + update()
        }
      }
    }
  }
  

  namespace main {
    namespace engine {
      namespace gameElements {
        class main.engine.gameElements.Train {
            - NB_WAGONS : int
            - entities : ArrayList<Entity>
            + Train()
            + addEntity()
            + getBandits()
            + getBountyAt()
            + getEntities()
            + getMarshall()
            + getTrainHeight()
            + getTrainLength()
            + removeEntity()
        }
      }
    }
  }
  

  main.engine.gameElements.Bandit -up-|> main.engine.gameElements.Character
  main.engine.gameElements.Bounty -up-|> main.engine.gameElements.Entity
  main.engine.gameElements.Character -up-|> main.engine.gameElements.Entity
  main.engine.gameElements.Entity o-- main.engine.gameElements.Train : train
  main.engine.gameElements.Marshall -up-|> main.engine.gameElements.Character


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
